bool.atg
COMPILER Bool  $CN
/* Simple logical thingy mabob.
   Liam Searle, Makungu Chansa, Matthew Lewis, Rhodes University, 2019 */

CHARACTERS
  term 		   = "abcdefghijklmnopqrstuvwxyz" .		 
  
TOKENS
  ident   = term.
  value    = "true" | "false".
  
IGNORE CHR(0) .. CHR(31)
  
PRODUCTIONS
  Bool    	   = {ident "=" Expression  ";"} EOF. 
  Expression   = Not | Term [Operator]   | BracketyBois [Operator]. 
  Operator 	   = Not  | And | Or  .
  Or		   = ("||" | "or") Expression .
  And		   = ("&&" | "and") Expression .
  Not 		   = ("!"  | "not") Expression .
  BracketyBois = "(" Expression ")"  . 
  Term 		   = ident|value .
END Bool .
